--- a/client/src/components/Paginate/Paginate.module.css
+++ b/client/src/components/Paginate/Paginate.module.css
@@ -1,5 +1,25 @@
 
 .button {
-  margin-inline-start: 1rem;
-  margin-block-end: 0.5rem ;
+  /* margin-inline-start: 1rem;
+  margin-block-end: 0.5rem ; */
+  display: flex;
+  margin-block-end: 0.4rem ;
+  inline-size: 13.75rem;
+  justify-content: space-between;
+  border-radius: 0.5rem;
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: rgba(230, 205, 138, 0.527);
+}
+
+.button button {
+  font-size: 16px;
+  color:rgb(109, 64, 5);
+  font-weight: bold;
+  border-radius: 0.5rem;
+}
+.button button:hover {
+  transform: scale(1.2);
+  cursor: pointer;
 }
