--- a/client/src/components/Sider/Sider.module.css
+++ b/client/src/components/Sider/Sider.module.css
@@ -6,6 +6,24 @@
   margin-inline-end: 15px;
  }
 
+.form label {
+  color:rgb(241, 158, 110);
+  font-weight: bold;
+  font-size: 20px;
+  text-shadow: 2px 2px 2px rgba(17, 17, 17, 0.8);
+}
+ 
  .form button {
+  font-size: 16px;
+  color:rgb(61, 40, 12);
+  background-color: rgb(214, 180, 135);
+  font-weight: bold;
+  border-radius: 0.5rem;
   margin-inline-end: 1rem;
- }
+  inline-size: 5rem;
+  block-size: 28px;
+}
+.form button:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
