--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   margin: 2rem;
-  border: 0.5px dashed green;
+  
  }
  .detail {
   display: flex;
@@ -15,40 +15,67 @@
   align-items: center;
   inline-size: 70rem;
   block-size: 30rem;
-  border: 0.5px dashed green;
+ 
  }
  .contentMap {
   display: flex;
   flex-direction: row;
   gap: 3rem;
+  backdrop-filter: blur(5px);
+  box-shadow: inset 0 0 10px #b4a906;
+  
  }
  .contentMap img {
   inline-size: 30rem;
   block-size: 25rem;
   vertical-align: middle;
   border-radius: 0.25rem;
+  transition: all 0.5s;
+  
  }
+ .contentMap img:hover {
+  transform: rotateY(180deg);
+  }
+
  .dataMap {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 2rem;
-  border: 0.5px dashed green;
+ 
  }
  .dataMap p {
   font-size: 1.2rem;
-  color: blueviolet;
+  font-weight: 400;
+  color: rgb(230, 214, 214);
+  
+ }
+ .dataMap h1 {
+  text-shadow: 3px 3px 3px rgba(190, 231, 195, 0.8);
+ }
+ .dataMap h3 {
+  color: rgb(238, 165, 71);
+  text-shadow: 5px 7px 5px rgba(12, 12, 12, 0.8);
  }
  .contentBtn {
   display: flex;
   justify-content: end;
   inline-size: 70rem;
-  border: 0.5px dashed pink;
- }
- .contentBtn button {
-  font-size: 1rem;
-  font-weight: bold;
-  border: 0.5px solid green;
-  color: green;
- }
+  }
  
+ .contentBtn button {
+  font-size: 18px;
+  color:rgb(12, 7, 0);
+  font-weight: bold;
+  border-radius: 0.5rem;
+  inline-size: 8rem;
+  block-size: 3.2rem;
+  background-color: rgb(168, 125, 69);
+
+}
+.contentBtn button:hover {
+  transform: scale(1.1);
+  background-color: rgb(10, 87, 61);
+  color: rgb(203, 236, 219);
+  cursor: pointer;
+}
