--- a/client/src/components/Search/Search.module.css
+++ b/client/src/components/Search/Search.module.css
@@ -6,9 +6,9 @@
 .search input {
   inline-size: 11.25rem;
   block-size: 2rem;
-  border: 1px solid #2b03ae;
+  border: 1px solid #057b17;
   border-radius: 7px 0px 0px 7px;
-  box-shadow: inset 0 0 10px #2b03ae;
+  box-shadow: inset 0 0 10px #7fe5ab;
   outline: none;
   padding-left: 1rem;
 }
@@ -16,7 +16,7 @@
 .search button {
   inline-size: 5rem;
   block-size: 1.8rem;
-  border: 1.5px solid #2b03ae;
+  border: 1px solid #2b03ae;
   font-size: 17px;
   font-weight: bold;
 }
