--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,15 +1,21 @@
+body {
+  margin: 0;
+  background-color: rgb(54, 113, 231);
+  font-family: Consolas, monaco, monospace;
+  padding:10px;
+}
 
-.app {
-  align-items: center; 
-   text-align: center;
-   background-image: url('./components/img/istockphoto-489553794-1024x1024-modif2.jpg');
-   background-size: cover;
-   background-repeat: no-repeat;
-   background-position: center center;
-   block-size: 100vh;
-   overflow: auto;
-   inline-size: 100vw;
-   display: flex;
-   flex-direction: column;
-   opacity: 0.8;
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  vertical-align: middle;
+  object-fit: cover;
+  z-index: -1;
+}
+
+body video {
+  pointer-events: none;
 }
