--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -3,13 +3,13 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  inline-size: 18rem;
-  block-size: 16rem;
+  inline-size: 18.5rem;
+  block-size: 16.3rem;
   text-align: center;
   gap: 0.5rem;
   border: 1px dashed #2b1383;
   border-radius: 0.5rem;
-  background-color: rgba(132, 168, 223, 0.938);
+  background-color: rgba(48, 150, 124, 0.598);
   filter: brightness(1.1) contrast(1.1);
 
 }
@@ -26,10 +26,15 @@
   font-size: 20px;
 
 }
+.hCont h5 {
+  color: rgb(80, 59, 4);
+  font-size: 14px;
+  filter: brightness(1.1) contrast(1.5);
+}
 
 .hCont h6 {
  
  border-radius: 50%;
  margin-top: 0.5rem;
- color: black;
+ color: rgb(143, 7, 7);
 }
