--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -2,28 +2,27 @@
   display: flex;
   justify-content: center;
   inline-size: 100vw;
-  block-size: 8vh;
-  backdrop-filter: blur(5px);
+  block-size: 7vh;
+  backdrop-filter: blur(8px);
+  background-color: rgba(228, 234, 41, 0.22);
+     
 }
 
 .navContent{
   display: flex;
-  flex-direction: row;
-  justify-content:flex-start;
-  gap: 3rem;
+  justify-content: space-between;
+  gap: 2rem;
   inline-size: 95vw;
-  block-size: 6vh;
-  padding: 15px;
-  margin-top: 10px;
-  border-radius: 5px;
+  block-size: 5vh;
+  margin-top: 0.6rem;
   
 }
 
 .homeForm {
-  color: rgb(179, 238, 124);
+  /* color: rgb(64, 120, 12); */
   font-weight: bold;
-  font-size: 22px;
-  text-shadow: 2px 2px 2px rgba(11, 11, 11, 0.8);
+  font-size: 21px;
+  text-shadow: 2px 2px 2px rgb(112, 188, 41);
 }
 .homeForm:hover {
   transform: scale(1.1);
@@ -35,5 +34,6 @@
   align-items: center;
   gap: 1rem;
   block-size: 1.7rem;
-  inline-size: 15rem;
+  inline-size: 20rem;
+  
 }
