--- a/client/src/components/Paginate/Paginate.module.css
+++ b/client/src/components/Paginate/Paginate.module.css
@@ -1,25 +1,27 @@
 
 .button {
-  /* margin-inline-start: 1rem;
-  margin-block-end: 0.5rem ; */
   display: flex;
-  margin-block-end: 0.4rem ;
   inline-size: 13.75rem;
   justify-content: space-between;
+  align-items: center;
   border-radius: 0.5rem;
   color: black;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   background-color: rgba(230, 205, 138, 0.527);
 }
 
 .button button {
-  font-size: 16px;
-  color:rgb(109, 64, 5);
+  font-size: 20px;
+  color:rgb(89, 52, 4);
   font-weight: bold;
   border-radius: 0.5rem;
+  inline-size:3rem;
+  block-size: 1.5rem;
+  padding-bottom: 6px;
+  background-color: rgba(236, 177, 88, 0.993);
 }
 .button button:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
   cursor: pointer;
 }
