--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -21,8 +21,10 @@
   display: flex;
   flex-direction: row;
   gap: 3rem;
-  backdrop-filter: blur(5px);
-  box-shadow: inset 0 0 10px #b4a906;
+  backdrop-filter: blur(8px);
+  /* box-shadow: inset 0 0 10px #b4a906;
+   */
+   border: 1px solid #b4a906;
   
  }
  .contentMap img {
@@ -45,17 +47,23 @@
  
  }
  .dataMap p {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 400;
-  color: rgb(230, 214, 214);
+  color: rgb(12, 140, 87);
+  font-weight: bold;
+  filter: brightness(1.4);
+  text-shadow: 2px 1px 2px rgba(3, 38, 7, 0.965);
   
  }
  .dataMap h1 {
-  text-shadow: 3px 3px 3px rgba(190, 231, 195, 0.8);
- }
+  font-size: 37px;
+  text-shadow: 3px 3px 3px rgba(134, 214, 143, 0.8);
+  margin-bottom: 1rem ;
+}
  .dataMap h3 {
-  color: rgb(238, 165, 71);
-  text-shadow: 5px 7px 5px rgba(12, 12, 12, 0.8);
+  color: rgb(234, 148, 34);
+  font-size: 1.3rem;
+  text-shadow: 4px 7px 4px rgba(0, 0, 0, 1);
  }
  .contentBtn {
   display: flex;
@@ -64,13 +72,13 @@
   }
  
  .contentBtn button {
-  font-size: 18px;
+  font-size: 15px;
   color:rgb(12, 7, 0);
   font-weight: bold;
   border-radius: 0.5rem;
-  inline-size: 8rem;
-  block-size: 3.2rem;
-  background-color: rgb(168, 125, 69);
+  inline-size: 7rem;
+  block-size: 2.5rem;
+  background-color: rgb(221, 189, 148);
 
 }
 .contentBtn button:hover {
